Fix issue with text wrapping, add section on new job role.

--- a/docs/output.css
+++ b/docs/output.css
@@ -501,6 +501,12 @@
   .text-wrap {
     text-wrap: wrap;
   }
+  .break-words {
+    overflow-wrap: break-word;
+  }
+  .break-all {
+    word-break: break-all;
+  }
   .text-black {
     color: var(--color-black);
   }
